--- a/myStyle.css
+++ b/myStyle.css
@@ -5,6 +5,12 @@
     font-family: Arial, sans-serif;
     /*background-image: url("/img/bg.png");*/
   }
+
+#links
+    {
+        position: fixed;
+        
+    }
   
 #main-body
     {
